--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 #layOut {
-  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+button {
+  width: fit-content;
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+/* header부분*/
 
 header {
   background-color: white;
@@ -13,6 +23,8 @@ header {
   flex-direction: row;
   justify-content: space-between;
 }
+
+/* AddComponent.jsx 부분*/
 
 form {
   width: 700px;
@@ -43,16 +55,9 @@ label {
   padding: 5px;
 }
 
+/* workingComponent.jsx,DoneComponent.jsx 부분 */
+
 .cardZone {
   width: 600px;
   margin: 20px;
-}
-
-button {
-  width: fit-content;
-  margin: 10px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
 }
